samples/_failures_safe/1761413994_326be4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_73027799.c: In function ‘main’:
./samples/SAFE/__tmp_73027799.c:173:23: error: expected ‘;’ at end of input
  173 |                 printf
      |                       ^
      |                       ;
./samples/SAFE/__tmp_73027799.c:173:17: error: expected declaration or statement at end of input
  173 |                 printf
      |                 ^~~~~~
./samples/SAFE/__tmp_73027799.c:173:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_73027799.c:173:17: error: expected declaration or statement at end of input
